--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     </div>
   </div>
 <!-- AUDIO Y BOTÓN -->
-<audio id="miCancion" src="https://github.com/facuuuuuuuuu/Mis-XV-Male.io/blob/main/Olivia%20Rodrigo%20-%20all-american%20bitch%20(live%20from%20rehearsal)%20%5B5myKp4ZD2KQ%5D.mp3"></audio>
+<audio id="miCancion" src="Olivia Rodrigo - all-american bitch (live from rehearsal) [5myKp4ZD2KQ].mp3"></audio>
 
 <button onclick="reproducirMusica()" style="
   margin-top: 20px;
