--- a/index.html
+++ b/index.html
@@ -90,40 +90,48 @@
       opacity: 1;
     }
 
-    .decoracion-superior {
-      position: relative;
-      height: 100px;
-      margin-bottom: 20px;
-    }
+  .decoracion-superior {
+  position: relative;
+  height: 130px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    .flor-loto {
-      display: block;
-      margin: 0 auto;
-      height: auto;
-      width: auto;
-      z-index: 2;
-      position: relative;
-    }
+.flor-loto {
+  max-height: 100px;
+  width: auto;
+  z-index: 2;
+  position: relative;
+}
 
-    .arabesco {
-      position: absolute;
-      top: 0;
-      height: 180px;
-      opacity: 1;
-      z-index: 3;
-    }
+.arabesco {
+  position: absolute;
+  top: 0;
+  width: auto;
+  height: auto;
+  z-index: 1;
+  opacity: 0.8;
+}
 
-    .arabesco.izq {
-      left: 0;
-      height: auto;
-      width: auto;
-    }
+.arabesco.izq {
+  left: 10px;
+}
 
-    .arabesco.der {
-      right: 0;
-    height: auto;
-      width: auto;
-    }
+.arabesco.der {
+  right: 10px;
+}
+
+@media (max-width: 500px) {
+  .flor-loto {
+    max-height: 80px;
+  }
+
+  .arabesco {
+    width: 45px;
+  }
+}
 
     .contenido h2 {
       font-family: 'Great Vibes', cursive;
