--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     .arabesco {
       position: absolute;
       top: 0;
-      width: auto;
-      height: auto;
+      width: 250px !important;
+      height: auto !important;
       z-index: 1;
       opacity: 0.8;
     }
@@ -129,8 +129,8 @@
       }
 
       .arabesco {
-        width: 70px;
-        height: auto;
+        width: 90px !important;
+        height: auto !important;
       }
     }
 
@@ -300,3 +300,4 @@
   </script>
 </body>
 </html>
+
