--- a/index.html
+++ b/index.html
@@ -123,13 +123,14 @@
       right: 10px;
     }
 
-    @media (max-width: 500px) {
+   @media (max-width: 500px) {
       .flor-loto {
-        max-height: 80px;
+        max-height: 120px;
+        max-width: auto;
       }
 
       .arabesco {
-        width: 90px !important;
+        width: 150px !important;
         height: auto !important;
       }
     }
